# PL-0

./: .gitignore  CMakeLists.txt  README.md  lexer.c  lexer.h  main.c  pl0_lex.c
doc/: AST_template.txt  accepted_token.txt  grammar.txt  grammar_EBNF.txt  syntax_tree_structure.txt
input/: expressions.txt  functions.txt  input1.txt  input2.txt  input3.txt
legacy/: parser_table.h  symbol_table.h
output/: AST_input1.txt  AST_input2.txt  l_out_input1.txt  l_output1.txt  l_output2.txt  l_output3.txt  output1.txt  output2.txt  p_out_input1.txt  p_out_input2.txt  p_out_input3.txt  p_output1.txt  p_output2.txt  p_output3.txt  symbol_table_expressions.txt  symbol_table_functions.txt  syntax_tree_expressions.txt  syntax_tree_functions.txt  token_stream_expressions.txt  token_stream_functions.txt  token_stream_input1.txt  token_stream_input2.txt
src/: README.md  lexer.c  lexer.h  main.c  parser.h
src/legacy/: l_output2.txt  p_output1.txt
src/lexer/: README.md  lexer.c  lexer.h
src/parser/: Pratt_parser.h  README.md  expression_parser.h  parse_helper.h  parser.c  parser.h  parser_AST.h  parser_stack.c  parser_stack.h  parser_table.c  parser_table.h  parser_tree.h  parsing_helper.h  recursive_descent_parser.h  syntax_tree.h
src/semanlyzr/: README.md  list_semantic_check.h  list_symbol_table.h  semanlyzer.c  semanlyzer.h  semantic_checks.h  symbol_stack.h  symbol_table.h  var_stack.h
